fix: Update Netty sun.misc version